@@ -665,6 +665,8 @@ inline short get_bg_spots(short spot)
 		case 0x58: return 16;
 		case 0x90: return 17;
 		case 0x78: return 18;
+			// For Usecode Container in BG:
+		case 0x38: return 19;
 		default: return 0;
 		}
 	}
@@ -893,7 +895,7 @@ void ExultStudio::save_shape_notebook
 	// In both cases, 0xFF means that it should not be saved
 	const signed char bg_spots[] = {0xFF, 0x08, 0xA0, 0x01, 0xA1, 0x40, 0x48,
 			0xFF, 0x20, 0xFF, 0xFF, 0x28, 0xA8, 0x30, 0xFF, 0x50, 0x58, 0x90,
-			0x78, 0xFF};
+			0x78, 0x38};
 	const signed char si_spots[] = {0xFF, 0x08, 0xa0, 0x01, 0xa1, 0x50, 0x20,
 			0x48, 0x18, 0x10, 0x78, 0x60, 0x28, 0x40, 0x58, 0x70, 0x68, 0xFF,
 			0xFF, 0x30};
