@@ -35,6 +35,7 @@
 #include "databuf.h"
 #include "ucsched.h"
 #include "cheat.h"
+#include "ready.h"
 
 #ifdef USE_EXULTSTUDIO
 #include "server.h"
@@ -319,9 +320,22 @@ int Container_game_object::create_quantity
 	bool temporary			// Create temporary quantity
 	)
 	{
-					// Usecode container?
-	if (get_shapenum() == 486 && Game::get_game_type() == SERPENT_ISLE)
-		return delta;
+			// Usecode container?
+			// Modified to check for correct flag instead of
+			// relying on shape number.
+	Shape_info& info = ShapeID::get_info(get_shapenum());
+	if (Game::get_game_type() == SERPENT_ISLE)
+		{
+		Ready_type_SI type = (Ready_type_SI) info.get_ready_type();
+		if (type == usecode_container_si)
+			return delta;
+		}
+	else if (Game::get_game_type() == BLACK_GATE)
+		{
+		Ready_type type = (Ready_type) info.get_ready_type();
+		if (type == usecode_container_bg)
+			return delta;
+		}
 	Shape_info& shp_info = ShapeID::get_info(shnum);
 	if (!shp_info.has_quality())	// Not a quality object?
 		qual = c_any_qual;	// Then don't set it.
